# MeteoOS

./: .gitignore  README.md
Arduino/: Arduino.ino
C++/: MeteoOS.uf2  README.md
C++/pico-boilerplate/: CMakeLists.txt  main.cpp
C++/pico-boilerplate/config/: Buttons.cpp  Buttons.h  Display.cpp  Display.h  config.cpp  config.h  hw_config.cpp  rtc_module.cpp  rtc_module.h  sd_card_config.cpp  sd_card_config.h  sd_card_manager.cpp  sd_card_manager.h  setup.cpp  setup.h  startup.cpp  startup.h
C++/pico-boilerplate/graphics/: graphics.cpp  graphics.h  page_elements.cpp  page_elements.h  qrcode_graphics.cpp  qrcode_graphics.h
C++/pico-boilerplate/graphics/graph/: concrete_strategy_daily.cpp  concrete_strategy_daily.h  concrete_strategy_weekly.cpp  concrete_strategy_weekly.h  context_graph_interval.cpp  context_graph_interval.h  strategy_graph_interval.cpp  strategy_graph_interval.h
C++/pico-boilerplate/pages/: Settings.cpp  Settings.h  add_sensor.cpp  add_sensor.h  brightness.cpp  brightness.h  del_data.cpp  del_data.h  del_sensor.cpp  del_sensor.h  format_sd.cpp  format_sd.h  homepage.cpp  homepage.h  reset_graph.cpp  reset_graph.h  set_time.cpp  set_time.h
C++/pico-boilerplate/sensors/: DHT11.cpp  DHT11.h  Sensor.cpp  Sensor.h  SensorManager.cpp  SensorManager.h  SensorType.h
C++/pico-boilerplate/utils/: measurements_tests.cpp  measurements_tests.h  string_modifiers.cpp  string_modifiers.h
MicroPython/: README.md  config.py  device_tests.py  graphics.py  graphics_text.py  homepage.py  main.py  page_elements.py  qr_code.py  requirements.sh  sdcard.py  settings.py  setup.py  temp_sensor.py  wifi.py
MicroPython/config/: buttons.py  config.py  env.py  sdcard_manager.py  settings_manager.py  setup.py  startup.py
MicroPython/graphics/: graph.py  graphics.py  graphics_text.py  page_elements.py
MicroPython/graphics/graph_strategy/: concrete_strategy_daily.py  concrete_strategy_weekly.py  context_graph_interval.py  graph_utils.py  strategy_graph_interval.py
MicroPython/pages/: add_sensor.py  brightness.py  del_data.py  del_sensor.py  format_sd.py  homepage.py  reset_graph.py  settings.py
MicroPython/sensors/: dht11.py  ds18b20.py  sensor_manager.py
MicroPython/utils/: date_operations.py  decorators.py  device_tests.py  file_operations.py  misc_utils.py  sensor_calculations.py
